# fpa-open-toolkit

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/routers/: api.py  export.py  pages.py
app/static/css/: custom.css
app/static/js/: charts.js
app/templates/: base.html  cashflow.html  debt.html  explorer.html  forecast.html  index.html  working_capital.html
docs/: architecture.md  data_dictionary.md  product_spec.md  roadmap.md
src/cashflow/: cashflow_projection.py
src/data_generation/: synthetic_generator.py
src/export/: xlsx_report.py
src/forecasting/: revenue_forecast.py
src/kpis/: financial_kpis.py
src/utils/: dates.py  formatting.py  io.py
tests/: test_app.py  test_cashflow_projection.py  test_dates.py  test_financial_kpis.py  test_formatting.py  test_io.py  test_revenue_forecast.py  test_synthetic_generator.py  test_templates_issue20.py  test_templates_issue22.py  test_xlsx_report.py
