[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpa-open-toolkit"
version = "0.1.0"
description = "FP&A Open Toolkit - Análise financeira open source para PMEs industriais"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Guilherme Biagi"},
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "holidays>=0.57",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
fpa-generate = "src.data_generation.synthetic_generator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
